[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Graphics/text/highscore.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/retro_computer_personal_use.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Graphics/text/text_exit.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/text/text_exit_focus.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Highscore/Highscore.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 2 )

[node name="Highscore" type="Node2D"]
script = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = 669.976
margin_top = 99.8662
margin_right = 857.976
margin_bottom = 128.866
custom_fonts/font = SubResource( 1 )
text = "Times are in UTC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 80.0
margin_right = 1032.0
margin_bottom = 496.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
margin_right = 912.0
margin_bottom = 416.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
margin_right = 912.0
margin_bottom = 364.0
size_flags_vertical = 3
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureRect" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_right = 912.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_top = 94.0
margin_right = 912.0
margin_bottom = 306.0
size_flags_vertical = 3

[node name="ScoreContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/ScrollContainer"]
margin_right = 912.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Link" type="LinkButton" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_top = 336.0
margin_right = 912.0
margin_bottom = 364.0
custom_fonts/font = SubResource( 2 )
text = "Get the game at github.com"
underline = 1

[node name="Exit" type="TextureButton" parent="MarginContainer/VBoxContainer2"]
margin_top = 368.0
margin_right = 912.0
margin_bottom = 416.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 6, 6 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/Link" to="." method="_on_Link_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Exit" to="." method="_on_Exit_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
